--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0"
   }
