--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "babel-loader": "^9.1.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -29,6 +30,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "uuid": "^9.0.1"
   }
 }
